Bug 151665 - 3D Earth Model plasmoid makes Plasma crash
Summary: 3D Earth Model plasmoid makes Plasma crash
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Aaron J. Seigo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-01 01:14 UTC by Grósz Dániel
Modified: 2007-11-01 03:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2007-11-01 01:14:12 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

If I place the 3D Earth Model plasmoid on the desktop, plasma crashes. Here is the output on the console I have started KDE 4 from:

plasma(11681) PlasmaAppletItemModel::mimeData: GETTING MIME DATA
plasma(11681) CustomDragTreeView::startDrag: Size:  96  Off:  16
plasma(11681)/kdecore (K*TimeZone*) KSystemTimeZonesPrivate::instance: instance(): ... initialised
plasma(11681)/kdecore (K*TimeZone*) KSystemTimeZonesPrivate::readConfig: readConfig(): local zone= "Europe/Budapest"
plasma(11681)/kdecore (K*TimeZone*) KSystemTimeZonesPrivate::readZoneTab: readZoneTab( "/usr/share/zoneinfo/zone.tab" )
plasma(11681)/kdecore (trader) KServiceTypeTrader::defaultOffers: query for serviceType  "Plasma/Applet"  : returning  1  offers
QGLPixelBuffer: Unable to find a context/format match - giving up.
plasma(11681) BlueMarble::initializeGL:
ASSERT failure in QList<T>::operator[]: "index out of range", file /usr/include/QtCore/qlist.h, line 394
X Error: BadWindow (invalid Window parameter) 3
  Major opcode: 18 (X_ChangeProperty)
  Resource id:  0x120002c
X Error: BadDrawable (invalid Pixmap or Window parameter) 9
  Major opcode: 55 (X_CreateGC)
  Resource id:  0x120002c
X Error: BadDrawable (invalid Pixmap or Window parameter) 9
  Major opcode: 55 (X_CreateGC)
  Resource id:  0x120002c
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 59 (X_SetClipRectangles)
  Resource id:  0x1200037
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 6 (RenderSetPictureClipRectangles)
  Resource id:  0x120002d
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 59 (X_SetClipRectangles)
  Resource id:  0x1200038
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 6 (RenderSetPictureClipRectangles)
  Resource id:  0x120002d
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 59 (X_SetClipRectangles)
  Resource id:  0x1200037
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 59 (X_SetClipRectangles)
  Resource id:  0x1200038
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 6 (RenderSetPictureClipRectangles)
  Resource id:  0x120002d
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 8 (RenderComposite)
  Resource id:  0x120002d
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 5 (RenderChangePicture)
  Resource id:  0x120002d
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 60 (X_FreeGC)
  Resource id:  0x1200038
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 60 (X_FreeGC)
  Resource id:  0x1200037
X Error: BadWindow (invalid Window parameter) 3
  Major opcode: 18 (X_ChangeProperty)
  Resource id:  0xa0003d
X Error: BadDrawable (invalid Pixmap or Window parameter) 9
  Major opcode: 55 (X_CreateGC)
  Resource id:  0xa0003d
X Error: BadDrawable (invalid Pixmap or Window parameter) 9
  Major opcode: 55 (X_CreateGC)
  Resource id:  0xa0003d
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 59 (X_SetClipRectangles)
  Resource id:  0xa0004a
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 6 (RenderSetPictureClipRectangles)
  Resource id:  0xa0003e
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 59 (X_SetClipRectangles)
  Resource id:  0xa0004b
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 6 (RenderSetPictureClipRectangles)
  Resource id:  0xa0003e
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 59 (X_SetClipRectangles)
  Resource id:  0xa0004a
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 59 (X_SetClipRectangles)
  Resource id:  0xa0004b
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 6 (RenderSetPictureClipRectangles)
  Resource id:  0xa0003e
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 8 (RenderComposite)
  Resource id:  0xa0003e
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 5 (RenderChangePicture)
  Resource id:  0xa0003e
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 60 (X_FreeGC)
  Resource id:  0xa0004b
X Error: BadGC (invalid GC parameter) 13
  Major opcode: 60 (X_FreeGC)
  Resource id:  0xa0004a
X Error: BadWindow (invalid Window parameter) 3
  Major opcode: 10 (X_UnmapWindow)
  Resource id:  0x120002c
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 7 (RenderFreePicture)
  Resource id:  0x120002d
X Error: BadWindow (invalid Window parameter) 3
  Major opcode: 18 (X_ChangeProperty)
  Resource id:  0x120002c
X Error: BadWindow (invalid Window parameter) 3
  Major opcode: 4 (X_DestroyWindow)
  Resource id:  0x120002c
X Error: BadWindow (invalid Window parameter) 3
  Major opcode: 10 (X_UnmapWindow)
  Resource id:  0xa0003d
X Error: RenderBadPicture (invalid Picture parameter) 179
  Extension:    154 (RENDER)
  Minor opcode: 7 (RenderFreePicture)
  Resource id:  0xa0003e
X Error: BadWindow (invalid Window parameter) 3
  Major opcode: 18 (X_ChangeProperty)
  Resource id:  0xa0003d
X Error: BadWindow (invalid Window parameter) 3
  Major opcode: 4 (X_DestroyWindow)
  Resource id:  0xa0003d
ksmserver(11666)/kdeui (KNotification) KNotificationManager::notificationClosed: 20
Comment 1 Aaron J. Seigo 2007-11-01 03:03:03 UTC
SVN commit 731580 by aseigo:

fix crash on gl failure

BUG:151665
CCMAIL:rivolaks@hot.ee


 M  +7 -1      kwinglutils.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=731580