fix crash on gl failure

BUG:151665
CCMAIL:rivolaks@hot.ee

svn path=/trunk/extragear/plasma/; revision=731580